--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -1,14 +1,34 @@
-<p id="notice"><%= notice %></p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= @garden.banner_url %>);">
+  <div class="container">
+    <h1><%= @garden.name %></h1>
+  </div>
+</div>
 
-<p>
-  <strong>Name:</strong>
-  <%= @garden.name %>
-</p>
 
-<p>
-  <strong>Banner url:</strong>
-  <%= @garden.banner_url %>
-</p>
+<div class="container">
 
-<%= link_to 'Edit', edit_garden_path(@garden) %> |
-<%= link_to 'Back', gardens_path %>
+  <div class="d-flex justify-content-between my-5">
+    <%= link_to 'Back', gardens_path, class: 'btn btn-info' %>
+
+    <%= link_to new_garden_plant_path(@garden), class: 'btn btn-secondary' do %>
+      <i class="fas fa-plus"></i>
+    <% end %>
+  </div>
+
+
+  <div class="cards">
+    <% @garden.plants.each do |plant| %>
+      <div class="card-category position-relative" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= plant.image_url %>)">
+        <%= plant.name %>
+
+        <%= link_to plant_path(plant), method: :delete, class: 'btn btn-danger position-absolute' do %>
+          <i class="fas fa-minus-square"></i>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+
+
+
