--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -31,6 +31,23 @@
   }
 }
 
+.card-tags {
+  position: absolute;
+  bottom: 8px;
+  left: 8px;
+  width: 80%;
+  span {
+    background: #03a9f4ad;
+    font-size: .7em;
+    padding: 2px 4px;
+    border-radius: 3px;
+    font-weight: 100;
+  }
+  a {
+    color: white;
+  }
+}
+
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .cards {
